# sparse-solver-benchmark

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  run_niagara.sh
cmake/: .FindMKL.cmake.un~  .FindSuiteSparse.cmake.un~  FindSuiteSparse.cmake
